Give each button unique ID

--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
     <div class="container">
         <div class="calculator">
             <div class="display">
-                <p class="display-message">0</p>
+                <p id="display-message">0</p>
             </div>
             <div class="buttons">
                 <button class="btn-operator"></button>
-                <button class="btn-operator">C</button>
-                <button class="btn-operator">U</button>
-                <button class="btn-operator">/</button>
+                <button id="clear" class="btn-operator">C</button>
+                <button id="backspace" class="btn-operator">B</button>
+                <button id="divide" class="btn-operator">/</button>
 
-                <button class="btn-number">7</button>
-                <button class="btn-number">8</button>
-                <button class="btn-number">9</button>
-                <button class="btn-operator">*</button>
+                <button id="n7" class="btn-number">7</button>
+                <button id="n8" class="btn-number">8</button>
+                <button id="n9" class="btn-number">9</button>
+                <button id="multiply" class="btn-operator">*</button>
 
-                <button class="btn-number">4</button>
-                <button class="btn-number">5</button>
-                <button class="btn-number">6</button>
-                <button class="btn-operator">-</button>
+                <button id="n4" class="btn-number">4</button>
+                <button id="n5" class="btn-number">5</button>
+                <button id="n6" class="btn-number">6</button>
+                <button id="subtract" class="btn-operator">-</button>
 
-                <button class="btn-number">1</button>
-                <button class="btn-number">2</button>
-                <button class="btn-number">3</button>
-                <button class="btn-operator">+</button>
+                <button id="n1" class="btn-number">1</button>
+                <button id="n2" class="btn-number">2</button>
+                <button id="n3" class="btn-number">3</button>
+                <button id="add" class="btn-operator">+</button>
 
                 <button class="btn-number">.</button>
-                <button class="btn-number">0</button>
-                <button class="btn-number">,</button>
-                <button class="btn-equal">=</button>
+                <button id="n0" class="btn-number">0</button>
+                <button id="comma" class="btn-number">,</button>
+                <button id="equals" class="btn-equal">=</button>
             </div>
         </div>
     </div>
